syntax = "proto3";
option go_package = "storage";
package chain.core.txdb.internal.storage;

message UtxoEntry {
  uint32 type        = 1;
  uint64 blockHeight = 2;
  bool   spent       = 3;
}
